--- a/debug.sample.xcconfig
+++ b/debug.sample.xcconfig
@@ -1,1 +1,12 @@
+//
+//  debug.sample.xcconfig
+//  EnvDemo
+//
+//  Created by Juraj Hilje on 21/05/2019.
+//  Copyright © 2019 Juraj Hilje. All rights reserved.
+//
+
+// Configuration settings file format documentation can be found at:
+// https://help.apple.com/xcode/#/dev745c5c974
+
 ENV = Debug sample
